# vpjax

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
docs/: conf.py  index.md  requirements.txt
docs/reference/: modules.rst  vpjax.brainstem.ica_identify.rst  vpjax.brainstem.rst  vpjax.cardiac.baroreceptor.rst  vpjax.cardiac.pulsatility.rst  vpjax.cardiac.rst  vpjax.cardiac.vagal.rst  vpjax.hemodynamics.balloon.rst  vpjax.hemodynamics.bold.rst  vpjax.hemodynamics.optics.rst  vpjax.hemodynamics.riera.rst  vpjax.hemodynamics.rst  vpjax.integrators.rst  vpjax.layers.iron_myelin.rst  vpjax.layers.profiles.rst  vpjax.layers.rst  vpjax.metabolism.fick.rst  vpjax.metabolism.oef.rst  vpjax.perfusion.calibration.rst  vpjax.perfusion.rst  vpjax.perfusion.trust.rst  vpjax.qbold.calibrated.rst  vpjax.qbold.dbv.rst  vpjax.qbold.oef_mapping.rst  vpjax.qbold.rst  vpjax.qbold.signal_model.rst  vpjax.qsm.rst  vpjax.qsm.susceptibility.rst  vpjax.rst  vpjax.sleep.csf_coupling.rst  vpjax.sleep.glymphatic.rst  vpjax.sleep.nvc_state.rst  vpjax.stochastic.rst  vpjax.stochastic.sleep_transitions.rst  vpjax.tests.test_balloon.rst  vpjax.tests.test_baroreceptor_ode.rst  vpjax.tests.test_cardiac.rst  vpjax.tests.test_deep_sleep.rst  vpjax.tests.test_integrators.rst  vpjax.tests.test_nvc_comparison.rst  (+12 more)
docs/tutorials/: balloon_windkessel.md  cardiac_coupling.md
scripts/: dgx_batch_validate.sh  process_wand_vpjax.py  submit_wand_all.sh  submit_wand_dgx.sh  submit_wand_preprocess.sh
vpjax/: __init__.py  _types.py  presets.py
vpjax/brainstem/: __init__.py  atlas.py  extract.py  ica_identify.py
vpjax/cardiac/: __init__.py  baroreceptor.py  pulsatility.py  vagal.py
vpjax/hemodynamics/: __init__.py  balloon.py  bold.py  inversion.py  optics.py  riera.py
vpjax/integrators/: __init__.py  local_linearization.py
vpjax/layers/: __init__.py  iron_myelin.py  layer_nvc.py  layering.py  profiles.py
vpjax/metabolism/: __init__.py  cmro2.py  fick.py  oef.py
vpjax/perfusion/: __init__.py  asl.py  calibration.py  kinetic.py  trust.py  vaso.py
vpjax/qbold/: __init__.py  calibrated.py  dbv.py  oef_mapping.py  signal_model.py
vpjax/qsm/: __init__.py  phase.py  r2star_fitting.py  susceptibility.py
vpjax/sleep/: __init__.py  csf_coupling.py  global_waves.py  glymphatic.py  locus_coeruleus.py  nvc_state.py  vasomotion.py
vpjax/stochastic/: __init__.py  fokker_planck.py  sde_balloon.py  sleep_transitions.py
vpjax/tests/: test_angiography.py  test_balloon.py  test_baroreceptor_ode.py  test_brainstem.py  test_cardiac.py  test_deep_sleep.py  test_glymphatic.py  test_integration.py  test_integrators.py  test_inversion.py  test_layers.py  test_metabolism.py  test_nvc_comparison.py  test_perfusion.py  test_qbold.py  test_qsm.py  (+7 more)
(+258 files in other folders)
