[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vpjax"
version = "0.1.0"
description = "Virtual Physiology in JAX — differentiable cerebrovascular models"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "Morgan G Hough" },
]
dependencies = [
    "jax>=0.4.20",
    "jaxlib>=0.4.20",
    "equinox>=0.11.0",
    "diffrax>=0.6.0",
    "jaxtyping>=0.2.20",
]

[project.optional-dependencies]
full = [
    "lineax>=0.0.4",
    "optimistix>=0.0.6",
]
dev = [
    "pytest>=7.0",
    "pytest-xdist",
]

[tool.pytest.ini_options]
testpaths = ["vpjax/tests"]
